--- a/requirements.txt
+++ b/requirements.txt
@@ -27,13 +27,13 @@ statsmodels==0.14.4
 ruptures==1.1.9
 Flask-Compress==1.17
 matplotlib==3.10.3
-langchain-google-genai==2.1.10
-langchain-community==0.3.29
-langchain==0.3.27
-langchain-core==0.3.75
-langchain_openai==0.3.32
-langchain-anthropic==0.3.5
-anthropic==0.45.1
+langchain-google-genai==4.1.2
+langchain-community==0.4.1
+langchain==1.2.0
+langchain-core==1.2.6
+langchain-openai==1.1.6
+langchain-anthropic==1.3.0
+anthropic==0.75.0
 lxml==6.0.0
 plotly==6.2.0
 kaleido==1.2.0
